# soylentgreen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  aqara-viewer.ipynb  aqara_viewer.py  docker-compose.yml  example.py  frame_capture.py  pyproject.toml  test.py  timelapse.py  video_loop.py  video_viewer.py
.github/workflows/: docker-image.yml  tests.yml
api/: .gitignore  README.md  api.rest  app.py  config.py  index.html  models.py  run_detector.py  run_labels.py  run_scan.py  scan.py  service.py
app/: run_detector.py
app/api/: run_scan.py
aqara_video/cli/: timelapse.py  video_loop.py
aqara_video/core/: clip.py  constants.py  factory.py  images.py  provider.py  timeline.py  types.py  video_reader.py  video_writer.py
aqara_video/ml/: detector.py  utils.py
aqara_video/providers/: aqara.py
aqara_video/viewers/: jupyter_viewer.py
aqara_video/web/: api.rest  app.py  box_detection.json  config.py  detector.py  index.html  models.py  run_detector.py  run_labels.py  run_scan.py  scan.py  service.py
batch/: lock_claim.py  run_detector.py  run_detector_with_lock.py  run_labels.py  run_scan.py  scan.py
cli/: __init__.py  timelapse.py  video_loop.py
detection/: detector.py  model_protocol.py  utils.py  yellow_box_detector.py
examples/: create_timeline.py  finding-boxes.ipynb  notebook-video.ipynb  notebook_viewer.ipynb  predict.ipynb
streaming/: hls.py  video.html
tests/test_batch/: test_lock_claim.py
tests/test_cli/: test_timelapse.py
tests/test_core/: sample2_video_metadata.json  sample_video_metadata.json  test_clip.py  test_frame_info.py  test_timeline.py  test_video_reader.py
tests/test_detection/: test_utils.py
tests/test_ml/: test_utils.py
tests/test_providers/: test_aqara.py
tests/test_video_footage/test_core/: test_clip.py  test_frame_info.py  test_timeline.py  test_video_reader.py
tests/test_video_footage/test_providers/: test_aqara.py
video_footage/core/: clip.py  constants.py  images.py  provider.py  timeline.py  video_writer.py
video_footage/viewers/: jupyter_viewer.py
viewerapp/: video_viewer.py
