[project]
name = "soylentgreen"
version = "0.1.0"
description = "Tools for creating timelapse videos from surveillance footage"
authors = [{ name = "Diego Caro", email = "your.email@example.com" }]
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "opencv-python>=4.11.0,<5",
    "ffmpeg-python>=0.2.0,<0.3",
   
    "joblib>=1.3.2,<2",
    "numpy>=2.2.3,<3; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    # For my old Intel-based Mac
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision==0.17.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "fastapi>=0.120.0",
    "uvicorn>=0.38.0",
    "dotenv>=0.9.9",
]

[project.scripts]
timelapse = "aqara_video.cli.timelapse:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "notebook>=7.4.7",
    "matplotlib>=3.10.7",
    "pre-commit>=4.3.0",
    "ipywidgets>=8.1.8",
]

[tool.hatch.build.targets.sdist]
include = ["aqara_video"]

[tool.hatch.build.targets.wheel]
include = ["aqara_video"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "UP", # modernize python
    "RUF", # ruff specific rules
]
extend-ignore = [
    "E731" # lambda assignment
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
ignore = ["tests"]
